# SynPath

./: .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  model_card.md  noxfile.py  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst
notebooks/: classes.dot  packages.dot  patient-agent.ipynb  patient_agent.tar  simulation.ipynb
src/patient_abm/: __init__.py  cli.py  log.py  utils.py
src/patient_abm/agent/: base.py  environment.py  patient.py
src/patient_abm/data_handler/: _fhir_resources.py  base.py  fhir.py
src/patient_abm/intelligence/: intelligence.py
src/patient_abm/simulation/: initialize.py  run.py  stopping_condition.py  template.py
template/breast_cancer/: config.json
template/example/: config.json
template/example/intelligence/: intelligence.py
template/template/: config.json
tests/agent/: test_base.py  test_environment.py  test_patient.py
tests/data/: config_0.json  config_1.json  config_2.json  environments_config.csv  environments_config.json  fhir_example_bundle.json  fhir_example_bundle_small.json  fhir_example_bundle_small_patient_agent_to_fhir.json  fhir_example_organization.json  fhir_example_patient.json  fhir_example_practitioner_0.json  fhir_example_practitioner_1.json  patient_patient-0_bundle.json  patients_config.csv  patients_config.json
tests/data_handler/: test_base.py  test_fhir.py
tests/simulation/: test_initialize.py  test_run.py  test_stopping_conditions.py  test_template.py
(+17 files in other folders)
