[metadata]
name = patient_abm
description = Agent-based modelling for patient pathways.
author = Faculty
author-email = info@faculty.ai
url = https://faculty.ai/

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    click    
    fhir.resources
    numpy
    pandas
    pydantic
    python-dateutil
    python-json-logger
    requests
    xmlschema


[options.packages.find]
where = src
exclude =
    tests

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
dev = 
    autoflake
    autopep8
    black
    ipykernel
    isort
    nox
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    patient_abm = patient_abm.cli:cli    

[tool:pytest]
# Options for py.test:
addopts =
    --cov patient_abm --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
exclude =
    .tox
    dist
    .eggs
